--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <section class="success-message">
         <p class="success__icon"><img src="assets/images/icon-list.svg"></p>
         <h1 class="success__heading">Thanks for subscribing!</h1>
-        <p class="success__paragraph">A confirmation email has been sent to <strong>ash@loremcompany.com</strong>.
+        <p class="success__paragraph">A confirmation email has been sent to <strong id="sender-email">ash@loremcompany.com</strong>.
       Please open it and click the button inside to confirm your subscription.</p>
       <button class="success__btn" id="close-dialog">Dismiss message</button>
       </section>
