small js and html tweaks

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
      <h1 class="content__heading">Stay updated!</h1>
     <p class="content__blurb">Join 60,000+ product managers receiving monthly updates on:</p>
     <ul class="content__list">
-      <li class="content-list__item"><span class="content-list__icon"><img src="assets/images/icon-list.svg"></span><span>Product discovery and building what matters</span></li>
-      <li class="content-list__item"><span class="content-list__icon"><img src="assets/images/icon-list.svg"></span><span>Measuring to ensure updates are a success</span></li>
-      <li class="content-list__item"><span class="content-list__icon"><img src="assets/images/icon-list.svg"></span><span>And much more!</span></li>
+      <li class="content-list__item"><span class="content-list__icon"><img src="assets/images/icon-list.svg" alt="Checklist icon"></span><span>Product discovery and building what matters</span></li>
+      <li class="content-list__item"><span class="content-list__icon"><img src="assets/images/icon-list.svg" alt="Checklist icon"></span><span>Measuring to ensure updates are a success</span></li>
+      <li class="content-list__item"><span class="content-list__icon"><img src="assets/images/icon-list.svg" alt="Checklist icon"></span><span>And much more!</span></li>
     </ul>
 
 
@@ -47,12 +47,12 @@
        <div class="form__content">
 
           <div class="form__message">
-            <p class="form__email">Email address</p>
+            <label class="form__email" for="email">Email address</label>
             <p class="form__field-message">Valid email required</p>
           </div>
 
           <input class="form__email-field" name="email" type="email" id="email" required placeholder="email@company.com">
-          <button class="form_primary-btn" type="submit">Subscribe to monthly newsletter</button>
+          <button id="subscribe-btn" class="form_primary-btn" type="submit">Subscribe to monthly newsletter</button>
         </div>
      </form>
   </section>
@@ -60,12 +60,12 @@
 
   <dialog id="subscribe-success">
       <!-- Success message start -->
-      <section class="success-message">
-        <p class="success__icon"><img src="assets/images/icon-list.svg"></p>
-        <h1 class="success__heading">Thanks for subscribing!</h1>
+      <section class="success-message" aria-modal="true" role="dialog" aria-labelledby="dialog-title">
+        <p class="success__icon"><img src="assets/images/icon-list.svg" alt=""></p>
+        <h1 id="dialog-title" class="success__heading">Thanks for subscribing!</h1>
         <p class="success__paragraph">A confirmation email has been sent to <strong id="sender-email">ash@loremcompany.com</strong>.
       Please open it and click the button inside to confirm your subscription.</p>
-      <button class="success__btn" id="close-dialog">Dismiss message</button>
+      <button type="button" class="success__btn" id="close-dialog" autofocus>Dismiss message</button>
       </section>
       <!-- Success message end -->
     </dialog>
